# print-shop-automation-workflow

./: .gitignore  34寸_拍立得_有边距_适应_不加信息页.py  56寸_拍立得_有边距_适应_不加信息页.py  LICENSE  README.md  batch_print_manager.py  config.example.json  config_manager.py  enhanced_exception_handler.py  exception_handler.py  folder_manager.py  folder_monitor.py  image_preprocessor.py  independent_voice_system.py  info_page_generator.py  log_manager.py  main.py  print_executor.py  print_system.py  printer_manager.py  printer_preset_manager.py  pyproject.toml  requirements.txt  task_dispatcher.py  task_manager.py  ui_main.py  ui_printer_config.py  voice_announcer.py  配置状态检查工具.py  预设配置引导工具.py
docs/: windows-printer-boundaries.md  workflow-design.md
examples/: order-folder-names.md
tests/: test_config_manager.py  test_folder_parser.py
